# ccqm-meson-building-blocks

./: LICENSE  LICENSE_NOT_SELECTED.md  README.md  ccqm.py  ccqm_stage1_backend.py  full_template.txt  p_to_v_grid.txt  pyproject.toml  quick_start.txt  requirements.txt  smoke_test.py
